--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,7 +32,7 @@ steps:
   displayName: 'Running Unit tests'
   inputs:
     command: test
-    projects: '**/webTest.csproj'
+    projects: '**/webtest.csproj'
     arguments: '/p:CollectCoverage=true /p:CoverletOutputFormat=cobertura /p:CoverletOutput=./MyCoverage/'
     publishTestResults: true
  
