Commited chnages for Dev

--- a/WebApp/WebApp/appsettings.Development.json
+++ b/WebApp/WebApp/appsettings.Development.json
@@ -5,5 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionString": "Development Connection String"
+  "ConnectionString": "Development Connection String This is DevOps CI changes for Dev"
 }
