--- a/WebApp/WebApp/appsettings.json
+++ b/WebApp/WebApp/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DBCS": "data source=tcp:sqlsvr-ecn-eus2-dev.database.windows.net,1433;initial catalog=sqldb-ecn-eus2-dev;persist security info=True;user id=ecnadmin;password=BbCg4Gdjfc6SKyKauCcN;"
+  },
   "AllowedHosts": "*"
 }
